chore: replace Collectors.toList() with List.toList()